// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project peach_gardenia {
  database_type: 'sqlite'
  Note: 'This DB offers case workers and child social care a way of creating wishlists for children in foster care which allows people to purchase items on the care worker/childs behalf '
}

Table organisations {
  id int [PK, increment]
    name varchar(200)
    email varchar(500)
    tel varchar(30)
}

Table branches {
  id int [PK, increment]
  organization int [ref: > organisations.id]
  name varchar(200)
  address int [ref: > addresses.id]
}

Table addresses {
  id int [PK, increment]
  row_1 text
  row_2 text
  city text
  state_county varchar(50)
  zip_code varchar(15)
  country varchar(50)
  locale varchar(10)
  address_type t_address
  local_email varchar(500)
  local_tel varchar(30)
}

Table case_workers {
  id int [PK, increment]
  first_name varchar(200)
  last_name varchar(200)
}

Table wishlists {
  id int [PK, increment]
  name varchar(200)
  description text
  wishlist_url text
  created_at timestamptz [DEFAULT: 'now()']
    case_worker_id int [not null]
}

Table wishlist_urls {
  url_slug text [PK]
  wishlist_id int [NOT NULL]
  is_primary boolean [DEFAULT: 'false']
  created_at timestamptz [DEFAULT: 'now()']
}

Table wishlist_items {
  id int [PK, increment]
  wishlist_id int
  asin varchar(10) [NOT NULL]
  product_name varchar(100)
  product_description text
  quantity int
  indexes {
    (wishlist_id, asin) [unique]
  }
}

Table wishlist_item_status {
  id int [pk, increment]
  wishlist_item_id int
  status t_status [NOT NULL]
  quantity int [NOT NULL, DEFAULT: '0']
  indexes {
    (wishlist_item_id, status) [unique]
  }
//  checks {
//   `quantity >= 0` [name: 'gtoeq_to_zero']
//  }
}



Table case_worker_branches {
  case_worker_id int [ref: > case_workers.id]
  branch_id int [ref: > branches.id]

  indexes {
    (case_worker_id, branch_id) [pk]
  }
}

/*
  many to many
  many case workers can belong to many organisations
  many addresses can belong to many case workers

  one to many
  many addresses can belong to an organisation,
  but only one organisation can be associated with an address.
*/


Ref Case_worker_wishlists: wishlists.case_worker_id > case_workers.id
Ref Wishlist_url_referrer: wishlist_urls.wishlist_id <> wishlists.id
Ref Wishlist_item_referrer: wishlist_items.wishlist_id <> wishlists.id
Ref Item_status_refer_wishlist_item: wishlist_item_status.wishlist_item_id < wishlist_items.id

Ref: "wishlist_items"."id" < "wishlist_items"."wishlist_id"